# opentp

./: .gitignore  README.md  opentp.py  premake4.lua
licences/: OpenTP_MIT_Licence.txt
misc/: unistd.h
opentp/: CMakeLists.txt
opentp/example/: CMakeLists.txt
opentp/example/source/: main.cpp
opentp/opentp/: CMakeLists.txt
opentp/opentp-tool/: CMakeLists.txt
opentp/opentp-tool/source/: main.cpp
opentp/opentp/include/: AtlasTexture.h  Image.h  OpenTP.h
opentp/opentp/include/opentp/: AtlasData.hpp  AtlasTexture.h  AtlasTexture.hpp  ConfigurationManager.hpp  Image.h  Image.hpp  OpenTP.h  OpenTP.hpp
opentp/opentp/source/: AtlasTexture.cpp  Image.cpp  OpenTP.cpp
opentp/opentp/source/libs/: tinyxml2.cpp
opentp/opentp/source/opentp/: AtlasData.cpp  AtlasTexture.cpp  ConfigurationManager.cpp  Image.cpp  OpenTP.cpp
